tests/baselines/reference/binaryArithmatic1.errors.txt
binaryArithmatic1.ts(1,13): error TS18050: The value 'null' cannot be used here.


==== binaryArithmatic1.ts (1 errors) ====
    var v = 4 | null;
                ~~~~
!!! error TS18050: The value 'null' cannot be used here.